--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,10 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
+      - run: name: chmod permissions
+             command: chmod +x ./gradlew
       - run: gradle dependencies
+
 
       - save_cache:
           paths:
@@ -40,9 +43,6 @@ jobs:
 
       # run tests!
       - run: gradle test
-      command: |
-                  sudo chmod +x gradlew
-                  ./gradlew androidDependencies
 
 
 
