--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 27
@@ -20,6 +21,9 @@ android {
     lintOptions {
         abortOnError false
     }
+    realm {
+        syncEnabled = true
+    }
 }
 
 dependencies {
@@ -29,7 +33,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
+    
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.afollestad:sectioned-recyclerview:0.5.0'
+    implementation 'com.android.support:support-annotations:27.0.2'
+    provided 'io.realm:realm-android:0.82.1'
+    annotationProcessor 'io.realm:realm-android:0.82.1'
 }
