--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".ui.reminderList.MainActivity">
+        <activity android:name=".ui.reminderlist.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.splash.SplashActivity"></activity>
-        <activity android:name=".ui.setReminder.SetReminderActivity"></activity>
+        <activity android:name=".ui.setreminder.SetReminderActivity"></activity>
     </application>
 
 </manifest>
