--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,26 +31,28 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    testCompile 'junit:junit:4.12'
     testImplementation 'junit:junit:4.12'
+    androidTestCompile 'com.android.support.test:rules:1.0.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:1.1.0"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
+
     // Test helpers for LiveData
     testImplementation "android.arch.core:core-testing:1.1.0"
+    testCompile 'org.mockito:mockito-core:2.15.0'
 
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.afollestad:sectioned-recyclerview:0.5.0'
     implementation 'com.android.support:support-annotations:27.0.2'
 
-    compile 'com.jakewharton:butterknife:8.8.1'
+    // ViewModel and LiveData
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.7.6'
-
+    compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
     compile "io.reactivex.rxjava2:rxjava:2.0.2"
+
 }
